# cl26-smh

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh
.github/workflows/: ci.yml
apps/bench/: main.cpp
apps/cli/: main.cpp
include/: Party.h  Protocol.h  Utils.h
include/trecdsa/: Errors.h  Party.h  Protocol.h  Types.h  Utils.h
include/trecdsa/compat/: bicycl_compat.h
reports/: architecture.md
src/: Party.cpp  Protocol.cpp  Utils.cpp  main.cpp
src/compat/: bicycl_compat.h  bicycl_utils.h
src/protocol/: party.cpp  party.h  protocol.cpp  protocol_unit.cpp  types.cpp
tests/: CMakeLists.txt  api_test.cpp  failure_test.cpp  smoke_test.cpp
